le añadimos la nueva funcionalidad

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Bienvenidos a mi blog personal </h1>
-   <p>Mi nombre es luis Sandoval.</p>
+   <p>Mi nombre es luis  Sandoval .</p>
      <div id="comentarios">
         <h2>Comentarios</h2>
       <p>Aquí estarán los comentarios de los lectores.</p>
+      <p> añadimos la prueba de cambio.</p>
       </div>
 </body>
 </html>
